# google-ai-sprint

./: .env.example  .gitignore  CLAUDE.md  README.md  adk_config.py  adk_server.py  adk_server_backup.py  package-lock.json  package.json  pyproject.toml  real_adk_agents.py  real_adk_test.py  requirements.txt  test_adk_agents.py  test_agents.py  test_fixed_adk.py  test_multi_agent.py
agents/: __init__.py  accessibility_agent.py  accessibility_tools.py  agent.py  chart_generation_agent.py  dashboard_layout_agent.py  evalset5052de.evalset.json  geospatial_agent.py
agents/generative_ui/: __init__.py  agent.py
dashboard/: __init__.py  agent.py  package-lock.json  package.json  tailwind.config.js
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/analyze/: route.ts
dashboard/src/components/: EnhancedLoadingState.tsx  InteractiveMapDisplay.tsx  QueryHistory.tsx  RechartsComponents.tsx  SafeComponentRenderer.tsx  ThemeProvider.tsx  TremorCharts.tsx
dashboard/src/components/ui/: alert.tsx  badge.tsx  theme-toggle.tsx
deployment/: deploy.py
docs/: DEVELOPMENT.md  TEST_PROMPTS.md  adk-integration-guide.md  adk-web-ui-guide.md  frontend-testing-guide.md  testing-guide.md  troubleshooting-quick-ref.md
docs/learner-resources/: core-architecture.md  genui-adk-colab-tutorial.ipynb  genui-adk.ipynb  implementation-examples.py  learning-exercises.md  troubleshooting-guide.md
eval/: test_scenarios.py
tests/: test_agent_integration.py
