[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generative-ui-adk"
version = "0.1.0"
description = "Multi-Agent Generative UI Business Intelligence System using Google ADK"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "google-adk>=0.1.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ['py311']